Read Java parameters from java.cfg file.